--- a/random_forest_code.ipynb
+++ b/random_forest_code.ipynb
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "d99bcf76",
    "metadata": {},
    "outputs": [],
@@ -284,9 +284,12 @@
     "        pred_log = model.predict(X_new)[0]\n",
     "        pred_rev = np.expm1(pred_log)\n",
     "        \n",
-    "        result_label.config(text=f\"Predicted Revenue: ${pred_rev:,.0f}\")\n",
-    "        success = \"SUCCESS\" if pred_rev > median_rev else \"NOT SUCCESSFUL\"\n",
-    "        success_label.config(text=f\"Prediction: {success} (Threshold: ${median_rev:,.0f})\")\n",
+    "        roi = (pred_rev - budget) / (budget + 1e-9)   # avoid div by zero\n",
+    "        is_success = pred_rev > budget\n",
+    "\n",
+    "        result_label.config(text=f\"Predicted Revenue: ${pred_rev:,.0f}  |  ROI: {roi*100:.1f}%\")\n",
+    "        success_text = \"SUCCESS (Predicted > Budget)\" if is_success else \"NOT SUCCESSFUL (Below Budget)\"\n",
+    "        success_label.config(text=success_text)\n",
     "    except Exception as e:\n",
     "        messagebox.showerror(\"Error\", str(e))\n",
     "\n",
